# airhocke

./: all_types_of_games.py  constants.py  functional.py  main.py  movement.py  player.py  project_description.docx  project_presentation.pptx  puck.py  right_otr_checker.py  utils.py  vector_math.py
serv/: client.py  discovery_protocol.py  ex_socket.py  network.py  server.py
src/desk_ui/: main.py  pyproject.toml  pyrightconfig.json
src/desk_ui/game_instances/: game_interface.py  instances.py  interfaces.py  playable.py  utils.py
src/front/airhockey/: package-lock.json  package.json
src/front/airhockey/src/: App.css  App.js  index.js
src/front/airhockey/src/assets/img/: icons.jsx
src/front/airhockey/src/components/BlurBall/: BlurBall.module.scss  index.js
src/front/airhockey/src/components/Header/: Header.module.scss  index.js
src/front/airhockey/src/components/Header/BurgerMenu/: index.js
src/front/airhockey/src/components/Layout/: Layout.module.scss  index.js
src/front/airhockey/src/components/MainTables/: MainTables.module.scss  index.js
src/front/airhockey/src/components/MainTitle/: MainTitle.module.scss  index.js
src/front/airhockey/src/components/Pagination/: Pagination.module.scss  index.jsx
src/front/airhockey/src/components/Profile/: Profile.jsx  Profile.module.scss
src/front/airhockey/src/components/Tab/: Tab.module.scss  index.jsx
src/front/airhockey/src/pages/Main/: index.js
src/front/airhockey/src/pages/NotFound/: index.js
src/front/airhockey/src/pages/Profile/: index.jsx
src/front/airhockey/src/styles/: fonts.scss  index.scss  tailwind.scss
src/server_part/: .gitignore  main.py  pyproject.toml  pyrightconfig.json
src/server_part/core/settings/: app.py  base.py
src/server_part/db/: __init__.py
src/server_part/settings/: __init__.py  base.py  dev.py  prod.py  test.py
(+2 files in other folders)
