[tool.poetry]
name = "desk_ui"
version = "0.1.0"
description = ""
authors = ["Yegor Shevchenko <egorhs19@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
pydocstyle = "^6.1.1"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
