[tool.poetry]
name = "server_part"
version = "0.1.0"
description = ""
authors = ["Yegor Shevchenko <egorhs19@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
cchardet = "^2.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
